<resources>
    <string name="app_name">Character Builder D&amp;D 5E</string>
    <string name="introduction_name">Hi! You may write your character name down here:</string>
    <string name="type_name">Type character name</string>
    <string name="introduction_folk">Select your folk:</string>
    <string name="introduction_class">Select your class:</string>
    <string name="button_done">Done</string>

    <string-array name="spinner_folk">
        <item>Select</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Dragonborn</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Tiefling</item>
    </string-array>

    <string name="toast_required">Please enter the required fields</string>
    <string name="character_sheet">Character sheet</string>
    <string name="introduction_rolls">You can roll some d20s</string>
    <string name="roll">Roll</string>
    <string name="advantage_disadvantage">Advantage/Disadvantage</string>

</resources>