<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutCreation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_main_activity"
        android:text="@string/introduction_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCharacterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/name_main_activity"
        android:hint="@string/type_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewFolk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_main_activity"
        android:text="@string/introduction_folk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCharacterName" />

    <Spinner
        android:id="@+id/spinnerSelectFolk"
        style="@style/spinners_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_folk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFolk" />

    <TextView
        android:id="@+id/textViewClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/text_main_activity"
        android:text="@string/introduction_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectFolk" />

    <Spinner
        android:id="@+id/spinnerSelectClass"
        style="@style/spinners_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClass" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_main_acivity"
        android:background="@drawable/button_background"
        android:text="@string/button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectClass" />

</androidx.constraintlayout.widget.ConstraintLayout>